Updated UrlNormalizer Implementation to be more robust